<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/normal"
        android:id="@+id/lblNormal"
        android:textSize="21sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abrirNavegador"
        android:id="@+id/btnNormal"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/lblNormal"
        android:theme="@style/buttonStyle"
        android:layout_alignLeft="@+id/btnChi"
        android:layout_alignStart="@+id/btnChi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chiCuadrada"
        android:id="@+id/lblChi"
        android:textSize="21sp"
        android:textColor="#000000"
        android:layout_above="@+id/btnChi"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abrirNavegador"
        android:id="@+id/btnChi"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/buttonStyle"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tStudent"
        android:id="@+id/lblStudent"
        android:textSize="21sp"
        android:textColor="#000000"
        android:layout_above="@+id/btnStudent"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abrirNavegador"
        android:theme="@style/buttonStyle"
        android:id="@+id/btnStudent"
        android:layout_marginBottom="68dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnChi"
        android:layout_alignStart="@+id/btnChi"
        android:textColor="#FFFFFF" />
</RelativeLayout>